# aflags

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  codecov.yml  pyproject.toml  test_flags.json  test_flags.yaml
.github/workflows/: ci.yml
docs/: api.md  development.md
src/aflags/: __init__.py  core.py
src/aflags/sources/: env.py  json.py  yaml.py
tests/: test_core.py  test_env_source.py  test_json_source.py  test_yaml_source.py
tests/fixtures/: invalid.json  invalid.yaml  invalid_boolean.json  invalid_boolean.yaml  invalid_percentage.json  invalid_percentage.yaml  missing_type.json  missing_type.yaml  non_dict_values.yaml  valid_flags.json  valid_flags.yaml  yaml_specific.yaml
