[project]
name = "aflags"
version = "0.1.0"
description = "A feature flags library with a tribute to Antonio Banderas"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aflags"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/aflags --cov-report=term-missing"
markers = [
    "timeout: mark test to timeout after a certain period"
]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"] 